[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_ecs_tilemap = { version = "0.16.0" }
bevy_enhanced_input = "0.18.1"
bevy_rand = { version = "0.11.3", features = ["wyrand"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
